# src/main/java/kz/halykacademy/bookstore/dao/authors/AuthorEntity.java
@@ -82,4 +82,13 @@ public class AuthorEntity {
             return new HashSet<>();
         }
     }
+
+    @Override
+    public String toString() {
+        return "AuthorEntity{" +
+                "firstName='" + firstName + '\'' +
+                ", lastName='" + lastName + '\'' +
+                ", patronymic='" + patronymic + '\'' +
+                '}';
+    }
 }
